--- a/.cdk/cdk.config.json
+++ b/.cdk/cdk.config.json
@@ -8,7 +8,7 @@
         "dev": {
             "aws": {
                 "account_name": "dev",
-                "account": "932213710980",
+                "account": "271633322377",
                 "region": "ap-southeast-1"
             },
             "vpc": {
@@ -19,8 +19,8 @@
             },
             "route53": {
                 "enable": true,
-                "domain": "demo1.dnx.one",
-                "hostname": "myapp"
+                "domain": "oatogether.com",
+                "hostname": "app.oatogether.com"
             },
             "acm": {
                 "create": true
