--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -38,7 +38,7 @@ jobs:
       - name: configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::932213710980:role/githubAccess
+          role-to-assume: arn:aws:iam::271633322377:role/InfraDeployGitHub
           role-session-name: github-deploy
           aws-region: ap-southeast-1
 
